--- a/estilo.css
+++ b/estilo.css
@@ -78,12 +78,12 @@ header {
     padding: 20px;
   }
   
-  /* Style the list inside the menu */
+  /* Style the list inside the menu 
   nav ul {
     list-style-type: none;
     padding: 0;
   }
-  
+  */
   article {
     float: left;
     padding: 20px;
@@ -116,4 +116,47 @@ header {
     background: rgb(255, 255, 255);
     padding: 20px;
     box-sizing: border-box;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    height: 50px;
+    overflow: hidden;
+    background-color: #333;
+    transform: skew(8deg);
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 18px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
+
+  .arrow {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+  }
+  
+  .right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+
+  .down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
   }
